# mcp-skeleton

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  __main__.py  tool_loader.py
app/tools/: __init__.py  api_tools.py  http_tools.py  web_tools.py
